通过alarmManager启动定时服务

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
                 <action android:name="android.intent.action.PACKAGE_REPLACED" />
                 <data android:scheme="package" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="com.vito.newmonitor" />
+            </intent-filter>
         </receiver>
     </application>
 
